--- a/style.css
+++ b/style.css
@@ -176,3 +176,59 @@ header nav a.current {
     color: #a1a1a1;
     text-align: center;
 }
+
+/** footer */
+
+footer {
+    padding: 30px 0;
+    background-color: #202020;
+    border-top: 10px solid #151515;
+}
+
+footer::after {
+    display: block;
+    content: "";
+    clear: both;
+}
+
+footer h2 {
+    line-height: 0;
+    text-indent: -10000px;
+}
+
+footer h4 {
+    margin: 0;
+    color: #555;
+    text-transform: uppercase;
+    font-size: 18px;
+}
+
+footer ul {
+    float: left;
+    width: 25%;
+    list-style-type: none;
+}
+
+footer li {
+    color: #aaa;
+    width: 80%;
+    margin: 20px 0;
+    font-size: 14px;
+    line-height: 1.6em;
+}
+
+footer li.tweet {
+    padding-left: 20px;
+    background: url(images/tweet.png) no-repeat left 6px;
+}
+
+#copyright {
+    clear: both;
+    float: left;
+    width: 100%;
+    margin-top: 30px;
+    padding-top: 30px;
+    color: #999;
+    font-size: 14px;
+    border-top: 2px solid #333;
+}
