--- a/style.css
+++ b/style.css
@@ -305,4 +305,47 @@ footer li.tweet {
         width: 100%;
         border-top: 1px solid #333;
     }
+
+    header {
+        padding: 0;
+        padding-top: 20px;
+    }
+
+    header .wrapper {
+        width: 100%;
+        padding: 0;
+    }
+
+    header nav {
+        background-color: #555;
+    }
+
+    header nav li {
+        float: none;
+        width: 100%;
+        margin: 0;
+    }
+
+    header nav li a {
+        display: block;
+        text-align: center;
+        padding: 10px;
+        color: #999;
+        border-top: 1px solid #4f4f4f;
+    }
+
+    header nav ul {
+        height: 0;
+        overflow: hidden;
+    }
+
+    header nav ul.open {
+        height: auto;
+    }
+
+    #burger-nav {
+        width: 100%;
+        height: 40px;
+        background: url(images/burger.png) no-repeat 98% center;
+    }
 }
