--- a/style.css
+++ b/style.css
@@ -346,6 +346,6 @@ footer li.tweet {
     #burger-nav {
         width: 100%;
         height: 40px;
-        background: url(images/burger.png) no-repeat 98% center;
+        background: url(images/burger-2.png) no-repeat 98% center;
     }
 }
